# tiny-ai

./: README.md  pyproject.toml
example/: example_usage.py
src/tiny_ai/: __init__.py  engine.py  indexer.py
